# flashcard-studio

./: .gitignore  CMakeLists.txt  DEV_DOCS_EN.md  DEV_DOCS_RU.md  README.md  TASK.md  USER_DOCS_EN.md  USER_DOCS_RU.md  resources.qrc
.github/workflows/: release-installer.yml
src/: main.cpp
src/models/: Card.cpp  Card.h  CardTableModel.cpp  CardTableModel.h  Deck.cpp  Deck.h  Project.cpp  Project.h  ProjectManager.cpp  ProjectManager.h  SpacedRepetitionLogic.cpp  SpacedRepetitionLogic.h
src/utils/: FileIO.cpp  FileIO.h  ThemeManager.cpp  ThemeManager.h
src/views/: DeckItemDelegate.cpp  DeckItemDelegate.h  DeckListWidget.cpp  DeckListWidget.h  EditWidget.cpp  EditWidget.h  LearnWidget.cpp  LearnWidget.h  MainWindow.cpp  MainWindow.h  StartScreen.cpp  StartScreen.h
windows/: app_icon.rc
